// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`intervalToRestrictiveDuration target 为 day 时表现正常 1`] = `
Object {
  "days": 367,
  "hours": 0,
  "milliseconds": 200,
  "minutes": 0,
  "months": 0,
  "seconds": 0,
  "years": 0,
}
`;

exports[`intervalToRestrictiveDuration target 为 hour 时表现正常 1`] = `
Object {
  "days": 0,
  "hours": 8808,
  "milliseconds": 200,
  "minutes": 0,
  "months": 0,
  "seconds": 0,
  "years": 0,
}
`;

exports[`intervalToRestrictiveDuration target 为 millisecond 时表现正常 1`] = `
Object {
  "days": 0,
  "hours": 0,
  "milliseconds": 31708800200,
  "minutes": 0,
  "months": 0,
  "seconds": 0,
  "years": 0,
}
`;

exports[`intervalToRestrictiveDuration target 为 minute 时表现正常 1`] = `
Object {
  "days": 0,
  "hours": 0,
  "milliseconds": 200,
  "minutes": 528480,
  "months": 0,
  "seconds": 0,
  "years": 0,
}
`;

exports[`intervalToRestrictiveDuration target 为 month 时表现正常 1`] = `
Object {
  "days": 2,
  "hours": 0,
  "milliseconds": 200,
  "minutes": 0,
  "months": 12,
  "seconds": 0,
  "years": 0,
}
`;

exports[`intervalToRestrictiveDuration target 为 second 时表现正常 1`] = `
Object {
  "days": 0,
  "hours": 0,
  "milliseconds": 200,
  "minutes": 0,
  "months": 0,
  "seconds": 31708800,
  "years": 0,
}
`;

exports[`intervalToRestrictiveDuration target 为 year 时表现正常 1`] = `
Object {
  "days": 2,
  "hours": 0,
  "milliseconds": 200,
  "minutes": 0,
  "months": 0,
  "seconds": 0,
  "years": 1,
}
`;

exports[`intervalToRestrictiveDuration 未设置 target 时表现正常 1`] = `
Object {
  "days": 2,
  "hours": 0,
  "milliseconds": 200,
  "minutes": 0,
  "months": 0,
  "seconds": 0,
  "years": 1,
}
`;
